--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,20 @@ version: '3.1'
 services:
   mongodb:
     image: mongo
-    container_name: mongodb
+    container_name: mongodb-fullstack
     ports:
       - 27017:27017
     volumes:
       - mongo-data:/data/db
     environment:
       MONGO_INITDB_DATABASE: userDB
+      
+
     restart: unless-stopped
 
-  mongo-express:
+  mongo-express-fullstack:
     image: mongo-express
-    container_name: mongo-express
+    container_name: mongo-express-fullstack
     depends_on:
       - mongodb
     ports:
@@ -22,10 +24,29 @@ services:
     environment:
       ME_CONFIG_MONGODB_SERVER: mongodb
       ME_CONFIG_MONGODB_PORT: 27017
-      ME_CONFIG_MONGODB_ENABLE_ADMIN: 'true'
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: 'false'
     restart: unless-stopped
+
+
+  server:
+    container_name: server
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mongodb
+
+  client:
+    container_name: client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - "3001:80"
+    depends_on:
+      - server 
 
 volumes:
   mongo-data:
